--- a/Weather/View/Base.lproj/Main.storyboard
+++ b/Weather/View/Base.lproj/Main.storyboard
@@ -15,14 +15,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4FQ-xx-JE0">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="4FQ-xx-JE0">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqS-JH-xbx">
                                 <rect key="frame" x="293" y="18" width="64" height="64"/>
                                 <state key="normal" image="switch"/>
                                 <connections>
-                                    <segue destination="nwa-96-mDs" kind="presentation" id="9qJ-d9-bFe"/>
+                                    <segue destination="nwa-96-mDs" kind="presentation" identifier="selectCity" id="9qJ-d9-bFe"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16˚" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUV-EH-tc2">
@@ -37,40 +38,43 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="S3J-8N-K73">
-                                <rect key="frame" x="67.5" y="358" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sunny" translatesAutoresizingMaskIntoConstraints="NO" id="S3J-8N-K73">
+                                <rect key="frame" x="62.5" y="306" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="OCa-D2-0jS"/>
+                                    <constraint firstAttribute="height" constant="250" id="aGR-Mx-Do6"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="IUV-EH-tc2" firstAttribute="top" secondItem="LqS-JH-xbx" secondAttribute="bottom" constant="54" id="32v-Fg-p3G"/>
-                            <constraint firstItem="LqS-JH-xbx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="18" id="4gZ-Uz-FTm"/>
-                            <constraint firstItem="4FQ-xx-JE0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5OF-Pt-R9L"/>
-                            <constraint firstItem="IUV-EH-tc2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" symbolic="YES" id="BIh-KX-b9N"/>
-                            <constraint firstItem="4FQ-xx-JE0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Djl-I9-vOg"/>
-                            <constraint firstItem="4FQ-xx-JE0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="GKd-mB-OJT"/>
-                            <constraint firstAttribute="bottom" secondItem="S3J-8N-K73" secondAttribute="bottom" constant="181" id="GRG-Bu-dq2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IUV-EH-tc2" secondAttribute="trailing" constant="16" id="N9G-A2-iwU"/>
-                            <constraint firstItem="4FQ-xx-JE0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="OKr-RD-siE"/>
-                            <constraint firstItem="baQ-M3-UB0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dO5-5J-lmR"/>
-                            <constraint firstItem="S3J-8N-K73" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="e6y-mB-svl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LqS-JH-xbx" secondAttribute="trailing" constant="18" id="eqH-ax-So4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="baQ-M3-UB0" secondAttribute="trailing" symbolic="YES" id="iED-4a-uo6"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="baQ-M3-UB0" secondAttribute="bottom" constant="20" id="mCs-bb-Qo6"/>
-                            <constraint firstItem="S3J-8N-K73" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mRL-O5-E7V"/>
-                            <constraint firstItem="S3J-8N-K73" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vpI-3B-xI1"/>
+                            <constraint firstItem="baQ-M3-UB0" firstAttribute="top" secondItem="S3J-8N-K73" secondAttribute="bottom" constant="55" id="0uf-Vg-TOu"/>
+                            <constraint firstItem="IUV-EH-tc2" firstAttribute="top" secondItem="LqS-JH-xbx" secondAttribute="bottom" constant="54" id="E1m-gf-6tS"/>
+                            <constraint firstItem="LqS-JH-xbx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="293" id="OZA-xX-Khx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="baQ-M3-UB0" secondAttribute="bottom" constant="20" id="PZV-c9-ggN"/>
+                            <constraint firstItem="IUV-EH-tc2" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="cgo-uM-4t9"/>
+                            <constraint firstItem="baQ-M3-UB0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ewC-Dw-sgu"/>
+                            <constraint firstItem="IUV-EH-tc2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" symbolic="YES" id="iDb-sx-NjU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="baQ-M3-UB0" secondAttribute="trailing" symbolic="YES" id="tJn-xu-HHO"/>
+                            <constraint firstItem="S3J-8N-K73" firstAttribute="top" secondItem="IUV-EH-tc2" secondAttribute="bottom" constant="50" id="tbC-3F-rii"/>
+                            <constraint firstItem="S3J-8N-K73" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vDc-He-Ymv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="iconImage" destination="S3J-8N-K73" id="Dee-JR-1dd"/>
+                        <outlet property="locationLabel" destination="baQ-M3-UB0" id="OSe-b0-Xvc"/>
+                        <outlet property="tempLabel" destination="IUV-EH-tc2" id="czH-ZS-Euf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-65" y="81"/>
+            <point key="canvasLocation" x="-66.400000000000006" y="80.50974512743629"/>
         </scene>
-        <!--View Controller-->
+        <!--Select City Controller View Controller-->
         <scene sceneID="2gJ-8f-ebR">
             <objects>
-                <viewController id="nwa-96-mDs" sceneMemberID="viewController">
+                <viewController id="nwa-96-mDs" customClass="SelectCityControllerViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jBm-vV-0za">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -79,16 +83,37 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="9UO-OT-CXW">
-                                <rect key="frame" x="69.5" y="51" width="225" height="102"/>
+                                <rect key="frame" x="75" y="240" width="225" height="107"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TE2-70-Wd5">
                                         <rect key="frame" x="0.0" y="0.0" width="225" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="查询天气" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pYl-X2-l7k">
-                                        <rect key="frame" x="39.5" y="59" width="145.5" height="43"/>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="36"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tmL-Oy-gAm">
+                                        <rect key="frame" x="51.5" y="59" width="122" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="切换城市">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="changeCity:" destination="nwa-96-mDs" eventType="touchUpInside" id="EY9-yh-Kr7"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Ux-xr-QQF">
+                                <rect key="frame" x="96" y="114" width="183" height="31.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前城市：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UcV-q1-JK1">
+                                        <rect key="frame" x="0.0" y="0.0" width="132" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kK-n7-l1z">
+                                        <rect key="frame" x="132" y="0.0" width="51" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -97,17 +122,23 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="9UO-OT-CXW" firstAttribute="top" secondItem="Gje-8k-h2N" secondAttribute="top" constant="51" id="1vC-lE-5dU"/>
+                            <constraint firstItem="9UO-OT-CXW" firstAttribute="top" secondItem="Gje-8k-h2N" secondAttribute="top" constant="240" id="6WA-td-8kp"/>
                             <constraint firstItem="0bP-CS-7za" firstAttribute="bottom" secondItem="Gje-8k-h2N" secondAttribute="bottom" id="82a-NM-PsV"/>
                             <constraint firstItem="0bP-CS-7za" firstAttribute="top" secondItem="Gje-8k-h2N" secondAttribute="top" id="GkQ-Vc-tRT"/>
-                            <constraint firstItem="0bP-CS-7za" firstAttribute="centerX" secondItem="9UO-OT-CXW" secondAttribute="centerX" constant="5.75" id="JPF-op-iof"/>
+                            <constraint firstItem="0bP-CS-7za" firstAttribute="centerX" secondItem="9UO-OT-CXW" secondAttribute="centerX" id="JPF-op-iof"/>
                             <constraint firstItem="0bP-CS-7za" firstAttribute="leading" secondItem="jBm-vV-0za" secondAttribute="leading" id="NO7-cf-6ZX"/>
                             <constraint firstItem="TE2-70-Wd5" firstAttribute="width" secondItem="0bP-CS-7za" secondAttribute="width" multiplier="3:5" id="SFV-iU-vgZ"/>
-                            <constraint firstItem="9UO-OT-CXW" firstAttribute="centerX" secondItem="jBm-vV-0za" secondAttribute="centerX" constant="-5.75" id="qCB-Tv-BN2"/>
+                            <constraint firstItem="6Ux-xr-QQF" firstAttribute="centerX" secondItem="jBm-vV-0za" secondAttribute="centerX" id="gPv-bp-eRA"/>
+                            <constraint firstItem="9UO-OT-CXW" firstAttribute="centerX" secondItem="jBm-vV-0za" secondAttribute="centerX" id="qCB-Tv-BN2"/>
+                            <constraint firstItem="6Ux-xr-QQF" firstAttribute="top" secondItem="Gje-8k-h2N" secondAttribute="top" constant="114" id="r71-4S-nKg"/>
                             <constraint firstItem="9UO-OT-CXW" firstAttribute="width" secondItem="0bP-CS-7za" secondAttribute="width" multiplier="3:5" id="vse-t2-oSb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Gje-8k-h2N"/>
                     </view>
+                    <connections>
+                        <outlet property="currentCityLabel" destination="0kK-n7-l1z" id="Cn7-LL-l8I"/>
+                        <outlet property="inputCity" destination="TE2-70-Wd5" id="nI4-b0-LLE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvJ-mI-NVG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -117,6 +148,7 @@
     <resources>
         <image name="background" width="500" height="755"/>
         <image name="cityBackground" width="600" height="399.5"/>
+        <image name="sunny" width="64" height="64"/>
         <image name="switch" width="64" height="64"/>
     </resources>
 </document>
